[tool.poetry]
name = "loki-wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
httpx = "^0.27.0"
logging = "^0.4.9.6"
litellm = "^1.42.7"
instructor = "^1.3.7"
modal = "^0.64.10"
vllm = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = "/home/sidbin/.cache/pypoetry/virtualenvs/loki-wrapper-6xHTOm4i-py3.12/bin/"
